infra/voice-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mefit-production-voice-api
  namespace: mefit-backend-production
  labels:
    app: mefit-production-voice-api
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app: mefit-production-voice-api
